# aegiswm-svn

trunk/data/: Makefile  Makefile.am  Makefile.in  Waimea.session  post-action.conf  post-action.conf.in  post-style.conf  post-style.conf.in  pre-action.conf  pre-action.conf.in  pre-style.conf  pre-style.conf.in  waimea.dtd  waimea.dtd.in  waimearc  waimearc.in
trunk/data/actions/: Makefile  Makefile.in  button-mappings.conf  button-mappings.conf.in  common.conf  common.conf.in  key-bindings.conf  key-bindings.conf.in
trunk/data/menus/: Makefile  Makefile.in  menu.conf  menu.conf.in
trunk/data/scripts/: Makefile  Makefile.in  actioncfgmenu.pl  actioncfgmenu.pl.in  file2textop.pl  file2textop.pl.in  stylecfgmenu.pl  stylecfgmenu.pl.in
trunk/data/styles/: Makefile  Makefile.in  logo.conf  logo.conf.in
trunk/src/: .Makefile.pre_automake  .gdbinit  .sconsign  Doxyfile  Makefile  Makefile.am  Makefile.in  Rantfile  SConstruct  action.cpp  action.h  ae_png.cpp  ae_png.h  ae_regex.cpp  ae_regex.h  aegis.cpp  aegis.h  aegis_regex.cpp  aegis_regex.h  base_action.h  build.rb  client.cpp  client.h  clientmap.cpp  clientmap.h  cscope.out  cursor.cpp  cursor.h  defaults.py  dockapp.cpp  dockapp.h  event.cpp  event.h  event_dispatcher.cpp  event_dispatcher.h  main.cpp  menu.cpp  menu.h  mulocal.py  net.cpp  (+22 more)
trunk/src/.deps/: Action.P  Cursor.P  Dockapp.P  Event.P  Menu.P  Net.P  Parser.P  Png.P  Regex.P  Render.P  Resources.P  Screen.P  Style.P  Timer.P  Util.P  Waimea.P  Window.P  action.P  aegis.P  aegis_regex.P  cursor.P  dockapp.P  event.P  main.P  menu.P  net.P  parser.P  png.pp  render.P  resources.P  screen.P  style.P  timer.P  window.P
trunk/src/.sconf_temp/: .sconsign  conftest_11.cpp  conftest_3.c  conftest_4.c  conftest_5.c  conftest_6  conftest_6.c  conftest_7  conftest_8  conftest_9.cpp
trunk/src/action/: Rantfile  SConscript  action.cpp  action.h  base_action.h  (+13 more)
(+68 files in other folders)
